--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,12 @@
     <dependency>
       <groupId>jp.co.yahoo.api-ads</groupId>
       <artifactId>ads-search-api-lib</artifactId>
-      <version>0.0.13</version>
+      <version>1.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>2.0.0-alpha6</version>
     </dependency>
   </dependencies>
 
