--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <dependency>
       <groupId>jp.co.yahoo.api-ads</groupId>
       <artifactId>ads-search-api-lib</artifactId>
-      <version>4.1.0</version>
+      <version>5.0.0-spring5</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
