--- a/pom.xml
+++ b/pom.xml
@@ -9,20 +9,20 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>17</maven.compiler.source>
+    <maven.compiler.target>17</maven.compiler.target>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>jp.co.yahoo.api-ads</groupId>
       <artifactId>ads-search-api-lib</artifactId>
-      <version>5.0.0-spring5</version>
+      <version>6.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
-      <version>2.0.0-alpha6</version>
+      <version>2.0.9</version>
     </dependency>
   </dependencies>
 
