--- a/src/main/resources/api_config.properties.dist
+++ b/src/main/resources/api_config.properties.dist
@@ -1,6 +1,8 @@
 #-----------------------------------------------------------------
 # Account
 #-----------------------------------------------------------------
+BASE_ACCOUNT_ID = 12345
+
 ACCOUNT_ID = 12345
 
 CLIENT_ID = xxx
